# poe2-mcp

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.claude/: settings.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
corpus/patch_notes/: patch_0_5_0_ascendancy_passive.md  patch_0_5_0_endgame.md  patch_0_5_0_items.md  patch_0_5_0_league.md  patch_0_5_0_player_changes.md  patch_0_5_0_skills_supports.md
poe2_mcp/: rag.py  server.py  wiki.py
scripts/: build_rag_corpus.py  embed_corpus.py
tests/: test_integration.py  test_parsers.py
