[project]
name = "poe2-mcp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.9.4",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pyright>=1.1.0",
]

[project.scripts]
poe2-mcp = "poe2_mcp.server:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
